# Principal

./: .gitignore  Crozzo_POS_Completo.html  crozzo-pos.key.pub  package-lock.json  package.json
app/: ARCHITECTURE.md  CrozzoA11yUser.js  CrozzoCentroCompras.js  CrozzoCentroProcesos.js  CrozzoComprasLocal.js  CrozzoLazyModules.js  CrozzoSystemUpdates.js  CrozzoTauriUpdater.js  Crozzo_POS_Completo.html  Crozzo_POS_DisenadorTicket.html  README.md  crm-registro-cliente.html
docs/: TAURI_UPDATER.md
releases/: latest.json  registry.json
scripts/: _git-push-latest.bat  copy-updater.mjs  generate-release-json.mjs  health-check-updates.mjs  patch-desktop-ux.mjs  set-tauri-version.mjs  sync-frontend-to-src.mjs  sync-version-from-tag.mjs  verificar-publicacion.mjs  verify-release-updater-json.mjs
src/: CrozzoA11yUser.js  CrozzoAuthSecurity.js  CrozzoCentroCompras.js  CrozzoCentroProcesos.js  CrozzoComprasLocal.js  CrozzoCostosEngine.js  CrozzoHoneypotSim.js  CrozzoModulosIntegradosAcceso.js  CrozzoModulosIntegradosPedidos.js  CrozzoPlanilla2026.js  CrozzoPosBoot.js  CrozzoPosCloud.js  CrozzoPosMain.js  CrozzoPosStyles.css  CrozzoQyC_App.html  CrozzoReservorio.js  CrozzoReservorioOffline.js  CrozzoSidebarNav.js  CrozzoSistemaCostos.js  CrozzoSupabaseUmd.js  CrozzoSystemUpdates.js  Crozzo_POS_DisenadorTicket.html  (+3 more)
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: crm_registro_server.rs  crozzo_print.rs  crozzo_silent_install.rs  dian_adquiriente.rs  dian_vpfe.rs  lib.rs  main.rs  webview_permissions.rs
(+82 files in other folders)
