[package]
name = "crozzo-pos"
version = "1.0.0"
description = "Crozzo POS - Punto de venta Colombia"
authors = ["Crozzo"]
edition = "2021"

[lib]
name = "crozzo_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
